--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
 
     <title>uRECO - Recognizing You</title>
 
+      <link src="//static/img/icon.ico" rel='icon' type='image/x-icon'/>
+
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -46,11 +48,11 @@
           <ul class="navbar-nav ml-auto">
 
               <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/#sign_up">Sign Up</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/sign_up">Sign Up</a>
             </li>
 
               <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/#sign_in">Sign In</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/sign_in">Sign In</a>
             </li>
 
 
@@ -85,149 +87,83 @@
     </header>
 
     <!-- features Grid Section -->
-    <section class="features" id="features">
+    <section class="features text-md-left text-secondary" id="features">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">features</h2>
         <hr class="star-dark mb-5">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <a class="features-item d-block mx-auto" href="#features-modal-1">
-              <div class="features-item-caption d-flex position-absolute h-100 w-100">
-                <div class="features-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="/static/img/features/cabin.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="features-item d-block mx-auto" href="#features-modal-2">
-              <div class="features-item-caption d-flex position-absolute h-100 w-100">
-                <div class="features-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="/static/img/features/cake.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
+
+            <div class="col-md-6 col-lg-4 text-center">
             <a class="features-item d-block mx-auto" href="#features-modal-3">
               <div class="features-item-caption d-flex position-absolute h-100 w-100">
                 <div class="features-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="/static/img/features/circus.png" alt="">
+              <img class="img-fluid align-content-center" src="/static/img/features/face_recognition.png" alt="" width="900" height="750">
+                  <h4 class="text-center js-scroll-trigger text-secondary mb-0"> Face Recognition </h4>
+
+
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="features-item d-block mx-auto" href="#features-modal-4">
+
+
+            <div class="col-md-6 col-lg-4 text-center">
+            <a class="features-item d-block mx-auto" href="#features-modal-3">
               <div class="features-item-caption d-flex position-absolute h-100 w-100">
                 <div class="features-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="/static/img/features/game.png" alt="">
+              <img class="img-fluid" src="/static/img/features/sign_language_temp.jpg" alt="" width="900" height="750">
+                  <h4 class="text-center  text-secondary mb-0"> Sign Language Detection </h4>
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="features-item d-block mx-auto" href="#features-modal-5">
+
+          <div class="col-md-6 col-lg-4 text-center">
+            <a class="features-item d-block mx-auto" href="#features-modal-3">
               <div class="features-item-caption d-flex position-absolute h-100 w-100">
                 <div class="features-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="/static/img/features/safe.png" alt="">
+              <img class="img-fluid" src="/static/img/features/v2.jpg" alt="" width="900" height="1000">
+                  <h4 class="text-center  text-secondary mb-10"> Virtual PC Controller </h4>
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="features-item d-block mx-auto" href="#features-modal-6">
-              <div class="features-item-caption d-flex position-absolute h-100 w-100">
-                <div class="features-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="/static/img/features/submarine.png" alt="">
-            </a>
-          </div>
+
         </div>
       </div>
     </section>
 
     <!-- About Section -->
-    <section class="bg-primary text-white mb-0" id="about">
+    <section class="bg-primary" id="about">
       <div class="container">
-        <h2 class="text-center text-uppercase text-white">About</h2>
-        <hr class="star-light mb-5">
+        <h2 class="text-center text-uppercase text-dark mb-5">About</h2>
+
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="text-justify lead">uRECO is a web application related to image and gesture recognition developed as a software engieering lab project using Python, TensorFLow HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="text-justify lead">uRECO gives you three awesome features like Face Recognition, Sign Language Detection and Virtual PC controller. So, Create an account by signing in with your email and password and have a experience with our awesome features.!!! </p>
           </div>
         </div>
-        <div class="text-center mt-4">
+        <div class="text-center mt-7">
           <a class="btn btn-xl btn-outline-light" href="#">
-            <i class="fa fa-download mr-2"></i>
-            Download Now!
+            <i class="fa fa-fw fa-toggle-up mr-2"></i>
+            Back To Top!!!
           </a>
         </div>
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <!-- Footer -->
-    <footer class="footer text-md-left">
+
+    <!-- contact or footer section -->
+
+    <footer id="contact" class="footer text-md-left">
       <div class="container text-center">
+
+        <h1 class="mb-5">Contact Us</h1>
+
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4>Location</h4>
