--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <title>uRECO - Recognizing You</title>
 
-      <link src="//static/img/icon.ico" rel='icon' type='image/x-icon'/>
+    <link href="/static/img/icon.ico" rel='icon' type='image/x-icon'/>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,7 +67,7 @@
             </li>
 
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#contact">Contact</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#contact">Contact Us</a>
             </li>
 
 
@@ -99,7 +99,7 @@
                 <div class="features-item-caption-content my-auto w-100 text-center text-white">
                 </div>
               </div>
-              <img class="img-fluid align-content-center" src="/static/img/features/face_recognition.png" alt="" width="900" height="750">
+              <img class="img-fluid align-content-center" src="/static/img/features/a.png" alt="" width="900" height="750">
                   <h4 class="text-center js-scroll-trigger text-secondary mb-0"> Face Recognition </h4>
 
 
@@ -113,8 +113,8 @@
                 <div class="features-item-caption-content my-auto w-100 text-center text-white">
                 </div>
               </div>
-              <img class="img-fluid" src="/static/img/features/sign_language_temp.jpg" alt="" width="900" height="750">
-                  <h4 class="text-center  text-secondary mb-0"> Sign Language Detection </h4>
+              <img class="img-fluid align-content-center" src="/static/img/features/sign_lang.png" alt="" width="900" height="450">
+                  <h4 class="text-center  text-secondary mb-0">Sign Language Detection</h4>
             </a>
           </div>
 
@@ -124,8 +124,8 @@
                 <div class="features-item-caption-content my-auto w-100 text-center text-white">
                 </div>
               </div>
-              <img class="img-fluid" src="/static/img/features/v2.jpg" alt="" width="900" height="1000">
-                  <h4 class="text-center  text-secondary mb-10"> Virtual PC Controller </h4>
+              <img class="img-fluid align-content-center" src="/static/img/features/c.png" alt="" width="900" height="750">
+                  <h4 class="text-center  text-secondary mb-0"> Virtual PC Controller </h4>
             </a>
           </div>
 
@@ -142,8 +142,8 @@
           <div class="col-lg-4 ml-auto">
             <p class="text-justify lead">uRECO is a web application related to image and gesture recognition developed as a software engieering lab project using Python, TensorFLow HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
           </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="text-justify lead">uRECO gives you three awesome features like Face Recognition, Sign Language Detection and Virtual PC controller. So, Create an account by signing in with your email and password and have a experience with our awesome features.!!! </p>
+          <div class="col-lg-4 mr-auto mb-4">
+            <p class="text-justify lead">uRECO gives you three awesome features like Face Recognition, Sign Language Detection and Virtual PC controller. So, Create an account by signing in with your email and password and have an experience.!!! </p>
           </div>
         </div>
         <div class="text-center mt-7">
