--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,14 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-    <title>uRECO - Sign Up</title>
-
-    <link href="/static/img/icon.ico" rel='icon' type='image/x-icon'/>
-
+  <head>
 
     <meta charset="utf-8">
-    <link href="/static/css/sign_up.css" rel='stylesheet' type='text/css'/>
+    <link href="/static/css/style.css" rel='stylesheet' type='text/css'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="application/x-javascript"> addEventListener("load", function () {
         setTimeout(hideURLbar, 0);
@@ -21,7 +17,12 @@
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <!--//webfonts-->
 
-</head>
+
+    <script src="/static/js/jquery-1.11.2.js"></script>
+    <script src="/static/js/sign_up.js"></script>
+
+  </head>
+
 <body>
 <div class="main">
     <div class="social-icons">
@@ -45,25 +46,18 @@
     </div>
     <h2>Or Signup with</h2>
     <form>
-        <div class="lable">
-            <div class="col_1_of_2 span_1_of_2"><input type="text" class="text" value="First Name"
-                                                       onfocus="this.value = '';"
-                                                       onblur="if (this.value == '') {this.value = 'First Name';}">
-            </div>
-            <div class="col_1_of_2 span_1_of_2"><input type="text" class="text" value="Last Name"
-                                                       onfocus="this.value = '';"
-                                                       onblur="if (this.value == '') {this.value = 'Last Name';}"></div>
-            <div class="clear"></div>
-        </div>
 
 
 
         <div class="lable-2">
-            <input type="text" class="text" value="Email Address" onfocus="this.value = '';"
+            <input id="name" type="text" class="text" value="User Name" onfocus="this.value = '';"
+                   onblur="if (this.value == '') {this.value = 'User Name';}">
+
+            <input id="email" type="text" class="text" value="Email Address" onfocus="this.value = '';"
                    onblur="if (this.value == '') {this.value = 'Email Address';}">
-            <input type="password" class="lable-2" placeholder="Password" onfocus="this.value = '';"
+            <input id="pass" type="password" class="lable-2" placeholder="Password" onfocus="this.value = '';"
                    onblur="if (this.value == '') {this.value = 'Password';}">
-            <input type="password" class="password" placeholder="Confirm Password" onfocus="this.value = '';"
+            <input id="c_pass" type="password" class="password" placeholder="Confirm Password" onfocus="this.value = '';"
                    onblur="if (this.value == '') {this.value = 'Confirm Password';}">
 
         </div>
@@ -72,7 +66,7 @@
             <h3>By creating an account, you agree to our <span class="term"><a href="#">Terms & Conditions</a></span>
             </h3>
             <div class="submit">
-                <input type="submit" onclick="myFunction()" value="Create account">
+                <input id="sign_up" type="submit" value="Create account">
             </div>
             <div class="clear"></div>
     </form>
