--- a/templates/home.html
+++ b/templates/home.html
@@ -46,11 +46,11 @@
           <ul class="navbar-nav ml-auto">
 
               <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/showSignUp">Sign Up</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/show_sign_up">Sign Up</a>
             </li>
 
               <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/sign_in">Sign In</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/show_sign_in">Sign In</a>
             </li>
 
 
