--- a/templates/home.html
+++ b/templates/home.html
@@ -94,7 +94,7 @@
             <div class="col-md-6 col-lg-4 text-center">
             <a class="features-item d-block mx-auto" href="#features-modal-3">
               <img class="img-fluid align-content-center" src="/static/img/features/1.png" alt="" width="900" height="750">
-                  <h4 class="text-center js-scroll-trigger text-secondary mb-0"> Face Recognition </h4>
+                  <h4 class="text-center js-scroll-trigger text-secondary mb-0"> Facial Expression Recognition </h4>
 
 
             </a>
@@ -110,10 +110,10 @@
           </div>
 
           <div class="col-md-6 col-lg-4 text-center">
-            <a class="features-item d-block mx-auto" href="#features-modal-3">
+            <a class="features-item d-block mx-auto" href="/virtual_keyboard">
 
               <img class="img-fluid align-content-center" src="/static/img/features/3.png" alt="" width="900" height="750">
-                  <h4 class="text-center  text-secondary mb-0"> Virtual PC Controller </h4>
+                  <h4 class="text-center  text-secondary mb-0"> Virtual Keyboard </h4>
             </a>
           </div>
 
