Sign In Complete

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,7 +206,7 @@ span.term a:hover {
     padding: 15px;
     font-size: 1.1em;
     margin: 18px 0px;
-    color: #666666;
+    color: #3B5998;
     width: 87%;
     cursor: pointer;
     font-family: 'Oxygen', sans-serif;
@@ -235,7 +235,7 @@ span.term a:hover {
     font-size: 1em;
     margin: 18px 0px;
     border: none;
-    color: #666666;
+    color: #3B5998;
     cursor: pointer;
     background: none;
     float: left;
