--- a/templates/home.html
+++ b/templates/home.html
@@ -68,6 +68,9 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#contact">Contact Us</a>
             </li>
 
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#log_out">Log Out</a>
+            </li>
 
           </ul>
         </div>
