--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -45,29 +45,25 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
 
-              <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/show_sign_up">Sign Up</a>
-            </li>
-
-              <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/show_sign_in">Sign In</a>
-            </li>
 
 
               <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#features">Features</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#features">Features</a>
             </li>
 
 
 
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#about">About</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#about">About</a>
             </li>
 
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#contact">Contact Us</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#contact">Contact Us</a>
             </li>
 
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/log_out">Log Out</a>
+            </li>
 
           </ul>
         </div>
@@ -223,6 +219,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="/static/js/freelancer.min.js"></script>
+
   </body>
 
 </html>
