--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -1,9 +1,84 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
     <title>uRECO - Sign In</title>
-    <link href="/static/img/icon.ico" rel='icon' type='image/x-icon'/>
+
+    <link href="/static/static/img/icon.ico" rel='icon' type='image/x-icon'/>
+
+    <!-- Bootstrap core CSS -->
+    <link href="/static/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="/static/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link href="/static/static/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
+
+    <!-- Custom styles for this template -->
+    <link href="/static/static/css/freelancer.min.css" rel="stylesheet">
+
+
+    <!-- Link for team member information design-->
+
+
+  </head>
+
+<body id="page-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger pull-left" href="/home">uRECO</a>
+        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+
+              <li class="nav-item mx-0 mx-lg-1 ">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/show_sign_up">Sign Up</a>
+            </li>
+
+              <li class="nav-item mx-0 mx-lg-1 ">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/show_sign_in">Sign In</a>
+            </li>
+
+
+              <li class="nav-item mx-0 mx-lg-1 ">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#/home#features">Features</a>
+            </li>
+
+
+
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#about">About</a>
+            </li>
+
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#contact">Contact Us</a>
+            </li>
+
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+
+
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -77,8 +152,7 @@
     </style>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-</head>
-<body>
+
 <div class="container">
 
     <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
@@ -437,4 +511,11 @@ $(function(){
 });
 </script>
 </body>
+
+
+
+
+
 </html>
+
+
