--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,29 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <title>uRECO - Sign Up</title>
-    <link href="/static/img/icon.ico" rel='icon' type='image/x-icon'/>
-
+<head>
 
     <meta charset="utf-8">
-    <link href="/static/css/style.css" rel='stylesheet' type='text/css'/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="application/x-javascript"> addEventListener("load", function () {
-        setTimeout(hideURLbar, 0);
-    }, false);
-    function hideURLbar() {
-        window.scrollTo(0, 1);
-    } </script>
-    <!--webfonts-->
-    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-    <!--//webfonts-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>uRECO - Sign In</title>
+
+    <link href="/static/static/img/icon.ico" rel='icon' type='image/x-icon'/>
+
+    <!-- Bootstrap core CSS -->
+    <link href="/static/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="/static/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+          type="text/css">
+
+    <!-- Plugin CSS -->
+    <link href="/static/static/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
+
+    <!-- Custom styles for this template -->
+    <link href="/static/static/css/freelancer.min.css" rel="stylesheet">
 
 
+    <!-- Link for team member information design-->
 
-  </head>
 
-<body>
+</head>
+
+<body id="page-top">
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand js-scroll-trigger pull-left" href="/home">uRECO</a>
+        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button"
+                data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+                aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+
+                <li class="nav-item mx-0 mx-lg-1 ">
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/show_sign_up">Sign
+                        Up</a>
+                </li>
+
+                <li class="nav-item mx-0 mx-lg-1 ">
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/show_sign_in">Sign
+                        In</a>
+                </li>
+
+
+                <li class="nav-item mx-0 mx-lg-1 ">
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right"
+                       href="/home#features">Features</a>
+                </li>
+
+
+                <li class="nav-item mx-0 mx-lg-1">
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#about">About</a>
+                </li>
+
+                <li class="nav-item mx-0 mx-lg-1">
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#contact">Contact Us</a>
+                </li>
+
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
 <div class="main">
     <div class="social-icons">
         <div class="col_1_of_f span_1_of_f"><a href="#">
@@ -45,39 +101,68 @@
         <div class="clear"></div>
     </div>
     <h2>Or Signup with</h2>
+    <div>
     <form action="/sign_up" method="POST">
-
 
 
         <div class="lable-2">
             <input id="name" name="name" type="text" class="text" value="Full Name" onfocus="this.value = '';"
                    onblur="if (this.value == '') {this.value = 'Full Name';}">
-            <input id="username" name="username" type="text" class="text" value="User Name" onfocus="this.value = '';"
+            <input id="username" name="username" type="text" class="text" value="User Name"
+                   onfocus="this.value = '';"
                    onblur="if (this.value == '') {this.value = 'User Name';}">
 
             <input id="email" name="email" type="text" class="text" value="Email Address" onfocus="this.value = '';"
                    onblur="if (this.value == '') {this.value = 'Email Address';}">
-            <input id="password" name="password" type="password" class="lable-2" placeholder="Password" onfocus="this.value = '';"
+            <input id="password" name="password" type="password" class="lable-2" placeholder="Password"
+                   onfocus="this.value = '';"
                    onblur="if (this.value == '') {this.value = 'Password';}">
-            <input id="c_password" name="c_password" type="password" class="lable-2" placeholder="Confirm Password" onfocus="this.value = '';"
+            <input id="c_password" name="c_password" type="password" class="lable-2" placeholder="Confirm Password"
+                   onfocus="this.value = '';"
                    onblur="if (this.value == '') {this.value = 'Confirm Password';}">
 
         </div>
-
-
-            <h3>By creating an account, you agree to our <span class="term"><a href="#">Terms & Conditions</a></span>
-            </h3>
-            <div class="submit">
-                <input id="sign_up" type="submit" value="Create account">
-            </div>
-            <div class="clear"></div>
     </form>
+    </div>
+
+        <div class="copy-right">
+            <p></p>
+            <p>Create an account and use our salient features.</p>
+        </div>
+
+
+        <input id="sign_up" onclick="getuserName()" type="submit" value="Create account">
+
+        <div class="clear"></div>
+
     <!-----//end-main---->
 </div>
 <!-----start-copyright---->
 <div class="copy-right">
-    <p>Template by <a href="http://w3layouts.com">w3layouts</a></p>
+    <p>Copyright:
+    <a href="http://facebook.com/AmitRoy707">Amit Roy</a>,
+    <a href="https://www.facebook.com/Saif.m.Dhrubo">Saif Mahmud</a>
+    <a href="http://facebook.com/tauhid.tanjim">Tauhid Tanjim</a>
+    </p>
+
 </div>
 <!-----//end-copyright---->
+
+
+<meta charset="utf-8">
+<link href="/static/css/style.css" rel='stylesheet' type='text/css'/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script type="application/x-javascript"> addEventListener("load", function () {
+    setTimeout(hideURLbar, 0);
+}, false);
+
+function hideURLbar() {
+    window.scrollTo(0, 1);
+} </script>
+<!--webfonts-->
+<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+<!--//webfonts-->
+
+
 </body>
 </html>
