Changed CSS and JScript Problem

--- a/templates/home.html
+++ b/templates/home.html
@@ -92,17 +92,18 @@
         <div class="row">
 
             <div class="col-md-6 col-lg-4 text-center">
-            <a class="features-item d-block mx-auto" href="#features-modal-3">
+
               <img class="img-fluid align-content-center" src="/static/img/features/1.png" alt="" width="900" height="750">
-                  <h4 class="text-center js-scroll-trigger text-secondary mb-0"> Facial Expression Recognition </h4>
+                  <h4 class="text-center js-scroll-trigger text-secondary mb-0">
+                      <a class="features-item d-block mx-auto" href="/facial_expression_recognition">
+                          Facial Expression Recognition</a> </h4>
 
 
-            </a>
           </div>
 
 
             <div class="col-md-6 col-lg-4 text-center">
-            <a class="features-item d-block mx-auto" href="#features-modal-3">
+            <a class="features-item d-block mx-auto" href="/sign_language_detection">
 
               <img class="img-fluid align-content-center" src="/static/img/features/2.png" alt="" width="900" height="450">
                   <h4 class="text-center  text-secondary mb-0">Sign Language Detection</h4>
@@ -113,7 +114,7 @@
             <a class="features-item d-block mx-auto" href="/virtual_keyboard">
 
               <img class="img-fluid align-content-center" src="/static/img/features/3.png" alt="" width="900" height="750">
-                  <h4 class="text-center  text-secondary mb-0"> Virtual Keyboard </h4>
+                   Virtual Keyboard
             </a>
           </div>
 
