--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -10,22 +10,22 @@
 
     <title>uRECO - Sign In</title>
 
-    <link href="/static/static/img/icon.ico" rel='icon' type='image/x-icon'/>
+    <link href="/static/img/icon.ico" rel='icon' type='image/x-icon'/>
 
     <!-- Bootstrap core CSS -->
-    <link href="/static/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="/static/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
           type="text/css">
 
     <!-- Plugin CSS -->
-    <link href="/static/static/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
+    <link href="/static/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="/static/static/css/freelancer.min.css" rel="stylesheet">
+    <link href="/static/css/freelancer.min.css" rel="stylesheet">
 
 
     <!-- Link for team member information design-->
