--- a/templates/home.html
+++ b/templates/home.html
@@ -95,7 +95,7 @@
 
               <img class="img-fluid align-content-center" src="/static/img/features/1.png" alt="" width="900" height="750">
                   <h4 class="text-center js-scroll-trigger text-secondary mb-0">
-                      <a class="features-item d-block mx-auto" href="/facial_expression_recognition">
+                      <a href="/facial_expression_recognition">
                           Facial Expression Recognition</a> </h4>
 
 
@@ -103,20 +103,26 @@
 
 
             <div class="col-md-6 col-lg-4 text-center">
-            <a class="features-item d-block mx-auto" href="/sign_language_detection">
+
 
               <img class="img-fluid align-content-center" src="/static/img/features/2.png" alt="" width="900" height="450">
-                  <h4 class="text-center  text-secondary mb-0">Sign Language Detection</h4>
-            </a>
+                  <h4 class="text-center  text-secondary mb-0">
+                      <a href="/sign_language_detection">
+                          Sign Language Detection</a></h4>
           </div>
 
-          <div class="col-md-6 col-lg-4 text-center">
-            <a class="features-item d-block mx-auto" href="/virtual_keyboard">
 
-              <img class="img-fluid align-content-center" src="/static/img/features/3.png" alt="" width="900" height="750">
-                   Virtual Keyboard
-            </a>
+
+
+            <div class="col-md-6 col-lg-4 text-center">
+
+
+              <img class="img-fluid align-content-center" src="/static/img/features/3.png" alt="" width="900" height="450">
+                  <h4 class="text-center  text-secondary mb-0">
+                      <a href="/virtual_keyboard">
+                          Virtual Keyboard</a></h4>
           </div>
+
 
         </div>
       </div>
