Features Image Changed

--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -87,9 +87,9 @@
         <hr class="star-dark mb-5">
         <div class="row">
 
-            <div class="col-md-6 col-lg-4 text-center">
+                        <div class="col-md-6 col-lg-4 text-center">
 
-              <img class="img-fluid align-content-center" src="/static/img/features/1.png" alt="" width="900" height="750">
+              <img class="img-fluid align-content-center" src="/static/img/features/face_reco.jpg" alt="" width="900" height="750">
                   <h4 class="text-center js-scroll-trigger text-secondary mb-0">
                       <a href="/facial_expression_recognition">
                           Facial Expression Recognition</a> </h4>
@@ -101,7 +101,7 @@
             <div class="col-md-6 col-lg-4 text-center">
 
 
-              <img class="img-fluid align-content-center" src="/static/img/features/2.png" alt="" width="900" height="450">
+              <img class="img-fluid align-content-center" src="/static/img/features/sign_reco.jpg" alt="" width="900" height="450">
                   <h4 class="text-center  text-secondary mb-0">
                       <a href="/sign_language_detection">
                           Sign Language Detection</a></h4>
@@ -113,7 +113,7 @@
             <div class="col-md-6 col-lg-4 text-center">
 
 
-              <img class="img-fluid align-content-center" src="/static/img/features/3.png" alt="" width="900" height="450">
+              <img class="img-fluid align-content-center" src="/static/img/features/virtual_keyboard.jpg" alt="" width="900" height="450">
                   <h4 class="text-center  text-secondary mb-0">
                       <a href="/virtual_keyboard">
                           Virtual Keyboard</a></h4>
