Fixed Sign Up Problem

--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -32,6 +32,10 @@
     <!-- Link for team member information design-->
 
 
+      <script type="text/javascript">
+
+      </script>
+
   </head>
 
 <body id="page-top">
@@ -189,7 +193,7 @@
                     <div class="form-group">
                         <!-- Button -->
                         <div class="col-sm-12 controls">
-                            <button type="submit" id="sign_in" class="btn btn-primary pull-right"><i class="glyphicon glyphicon-log-in"></i> Log in</button>
+                            <button onclick="btnClick()" type="submit" id="sign_in" class="btn btn-primary pull-right"><i class="glyphicon glyphicon-log-in"></i> Log in</button>
                         </div>
                     </div>
 
