--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -66,11 +66,13 @@
 
 
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#about">About</a>
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right"
+                       href="/home#about">About</a>
                 </li>
 
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#contact">Contact Us</a>
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#contact">Contact
+                        Us</a>
                 </li>
 
 
@@ -102,47 +104,52 @@
     </div>
     <h2>Or Signup with</h2>
     <div>
-    <form action="/sign_up" method="POST">
+        <form action="/sign_up" method="POST">
 
 
-        <div class="lable-2">
-            <input id="name" name="name" type="text" class="text" value="Full Name" onfocus="this.value = '';"
-                   onblur="if (this.value == '') {this.value = 'Full Name';}">
-            <input id="username" name="username" type="text" class="text" value="User Name"
-                   onfocus="this.value = '';"
-                   onblur="if (this.value == '') {this.value = 'User Name';}">
+            <div class="lable-2">
+                <input id="name" name="name" type="text" class="text" value="Full Name" onfocus="this.value = '';"
+                       onblur="if (this.value == '') {this.value = 'Full Name';}">
+                <input id="username" name="username" type="text" class="text" value="User Name"
+                       onfocus="this.value = '';"
+                       onblur="if (this.value == '') {this.value = 'User Name';}">
 
-            <input id="email" name="email" type="text" class="text" value="Email Address" onfocus="this.value = '';"
-                   onblur="if (this.value == '') {this.value = 'Email Address';}">
-            <input id="password" name="password" type="password" class="lable-2" placeholder="Password"
-                   onfocus="this.value = '';"
-                   onblur="if (this.value == '') {this.value = 'Password';}">
-            <input id="c_password" name="c_password" type="password" class="lable-2" placeholder="Confirm Password"
-                   onfocus="this.value = '';"
-                   onblur="if (this.value == '') {this.value = 'Confirm Password';}">
+                <input id="email" name="email" type="text" class="text" value="Email Address" onfocus="this.value = '';"
+                       onblur="if (this.value == '') {this.value = 'Email Address';}">
+                <input id="password" name="password" type="password" class="lable-2" placeholder="Password"
+                       onfocus="this.value = '';"
+                       onblur="if (this.value == '') {this.value = 'Password';}">
+                <input id="c_password" name="c_password" type="password" class="lable-2" placeholder="Confirm Password"
+                       onfocus="this.value = '';"
+                       onblur="if (this.value == '') {this.value = 'Confirm Password';}">
 
-        </div>
-    </form>
+            </div>
+
+
+
+    <div class="copy-right">
+        <p></p>
+        <p>Create an account and use our salient features.</p>
     </div>
 
-        <div class="copy-right">
-            <p></p>
-            <p>Create an account and use our salient features.</p>
-        </div>
+    -
+    <div class="submit">
 
+        <input id="sign_up" type="submit" value="Create account">
+    </div>
 
-        <input id="sign_up" onclick="getuserName()" type="submit" value="Create account">
-
-        <div class="clear"></div>
-
+    <div class="clear"></div>
+    </form>
     <!-----//end-main---->
+    </div>
 </div>
+
 <!-----start-copyright---->
 <div class="copy-right">
     <p>Copyright:
-    <a href="http://facebook.com/AmitRoy707">Amit Roy</a>,
-    <a href="https://www.facebook.com/Saif.m.Dhrubo">Saif Mahmud</a>
-    <a href="http://facebook.com/tauhid.tanjim">Tauhid Tanjim</a>
+        <a href="http://facebook.com/AmitRoy707">Amit Roy</a>,
+        <a href="https://www.facebook.com/Saif.m.Dhrubo">Saif Mahmud</a>
+        <a href="http://facebook.com/tauhid.tanjim">Tauhid Tanjim</a>
     </p>
 
 </div>
