--- a/templates/home.html
+++ b/templates/home.html
@@ -55,13 +55,13 @@
 
 
               <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#features">Features</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#features">Features</a>
             </li>
 
 
 
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="#about">About</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#about">About</a>
             </li>
 
             <li class="nav-item mx-0 mx-lg-1">
