--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -48,17 +48,17 @@
 
 
               <li class="nav-item mx-0 mx-lg-1 ">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#features">Features</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/logged_in#features">Features</a>
             </li>
 
 
 
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#about">About</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/logged_in#about">About</a>
             </li>
 
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/home#contact">Contact Us</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger pull-right" href="/logged_in#contact">Contact Us</a>
             </li>
 
             <li class="nav-item mx-0 mx-lg-1">
