Fixed ASL Force stop issue

--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,7 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="/static/img/profile.png" alt="">
         <h1 >uRECO - Recognizing You</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Face Recognition - Sign Language Detection - Virtual PC Controller</h2>
+        <h2 class="font-weight-light mb-0">Facial Expression Classifier - Sign Language Detection - Virtual PC Keyboard</h2>
       </div>
     </header>
 
